--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,5 +34,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - {path: ^/questions/ajouter$, roles: ROLE_USER}
+        - {path: ^/mon-compte, roles: ROLE_USER}
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
